# easify-seller

./: .gitignore  README.md  agent.py  bot.py  bouquets.json  embed.py  logger_config.py  main.py  pyproject.toml  query_photo.py  query_text.py  search_tools.py  test_bot.py  test_logging.py  test_photo_urls.py  test_photos.py
app/: __init__.py  agent.py  bot.py  embed.py  query_photo.py  query_text.py  search_tools.py
data/: bouquets_romantic.json
tests/: __init__.py  test_bot.py  test_logging.py  test_photo_urls.py  test_photos.py
